add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G837JE1B1W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-G837JE1B1W');
+  </script>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/web-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
